tools/tests/errors/surf_name_04.ki
# name resolution: a name from a sibling function is invisible in another function
var a = Function():
    var secret = 1
    return secret
var b = Function():
    return secret
discard b()
